--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,7 +47,7 @@ before_build:
   - choco install putty.install
   - nuget install secure-file -ExcludeVersion
   - ps: ls
-  - if [%APPVEYOR_PULL_REQUEST_TITLE%]!=[""] secure-file\tools\secure-file -decrypt "%S%/pxscene-build.pem.ppk.enc" -secret %passphrase%
+  - if [%APPVEYOR_PULL_REQUEST_TITLE%]==[""] secure-file\tools\secure-file -decrypt "%S%/pxscene-build.pem.ppk.enc" -secret %passphrase%
 build_script:
   - echo build_script...
   - cd %S%
