--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,8 +32,10 @@ clone_folder: "c:/dw/pxCore"
 # Build pipeline: https://www.appveyor.com/docs/build-configuration/
 init:
   - echo environment setup...
+  - SET
   - git config --system core.longpaths true
   - ps: "ls \"C:/\""
+  - if ["%APPVEYOR_PULL_REQUEST_TITLE%"]==[""] secure-file\tools\secure-file -decrypt "%S%/pxscene-build.pem.ppk.enc" -secret %passphrase%
 
 build_script:
   - echo build_script...
