--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,7 +36,7 @@ init:
   - SET
   - git config --system core.longpaths true
   - ps: "ls \"C:/\""
-  - secure-file\tools\secure-file -decrypt "%S%/pxscene-build.pem.ppk.enc" -secret %passphrase%
+  - if ["%APPVEYOR_PULL_REQUEST_TITLE%"]==[""] secure-file\tools\secure-file -decrypt "%S%/pxscene-build.pem.ppk.enc" -secret %passphrase%
 hosts:
   build_server: 96.116.56.119
 
