--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,11 @@ before_script:
 - if [ "$TRAVIS_EVENT_TYPE" = "push" ] || [ "$TRAVIS_EVENT_TYPE" = "pull_request"
   ]; then ccache -s; fi
 - "./ci/before_script.sh"
-- if [ "$TRAVIS_EVENT_TYPE" = "cron" ]; then export linenumber=`awk '/CFBundleShortVersionString/{
+- if [ "$TRAVIS_EVENT_TYPE" = "api" ]; then export linenumber=`awk '/CFBundleShortVersionString/{
   print NR; exit }' $TRAVIS_BUILD_DIR/examples/pxScene2d/src/macstuff/Info.plist`;export
   PX_VERSION=`sed -n "\`echo $((linenumber+1))\`p" $TRAVIS_BUILD_DIR/examples/pxScene2d/src/macstuff/Info.plist|awk
   -F '<string>' '{print $2}'|awk -F'</string>' '{print $1}'`; fi
+- if [ "$TRAVIS_EVENT_TYPE" = "cron" ] ; then export PX_VERSION="pxscene:edge" ; fi
 script:
 - "./ci/script.sh"
 - if [ "$TRAVIS_EVENT_TYPE" = "push" ] || [ "$TRAVIS_EVENT_TYPE" = "pull_request"
