--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,5 +47,5 @@ build_script:
 test: off
 
 cache:		
-  - %s%\examples\pxScene2d\external\libnode-v6.9.0
+  - c:/dw/pxCore/examples/pxScene2d/external/libnode-v6.9.0
 # validator: https://ci.appveyor.com/tools/validate-yaml
