--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,6 +47,5 @@ build_script:
 test: off
 
 cache:		
-  - c:/dw/pxCore/examples/pxScene2d/external/libnode-v6.9.0/build/Release/lib/v8_base_0.lib
-  - c:/dw/pxCore/examples/pxScene2d/external/libnode-v6.9.0/build/Release/lib/v8_base_1.lib
+  - c:/pxCore/AR/pxCoreTest/pxcore/examples/pxScene2d/external/vc.build/builds
 # validator: https://ci.appveyor.com/tools/validate-yaml
