--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,12 +26,14 @@ image: Visual Studio 2017
 
 environment:
   S: "c:/dw/pxCore"
+  
 
 clone_folder: "c:/dw/pxCore"
 
 # Build pipeline: https://www.appveyor.com/docs/build-configuration/
 init:
   - echo environment setup...
+  - set
   - git config --system core.longpaths true
   - ps: "ls \"C:/\""
 
@@ -47,5 +49,5 @@ build_script:
 test: off
 
 cache:		
-  - c:/pxCore/AR/pxCoreTest/pxcore/examples/pxScene2d/external/vc.build/builds
+    - c:/pxCore/AR/pxCoreTest/pxcore/examples/pxScene2d/external/vc.build/builds
 # validator: https://ci.appveyor.com/tools/validate-yaml
