--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,6 +48,6 @@ test: off
 
 cache:		
     - c:/dw/pxCore/examples/pxScene2d/external/vc.build/builds/
-    - c:/dw/pxCore/examples/pxScene2d/external/libnode-v6.9.0/Release/lib
-    - c:/dw/pxCore/examples/pxScene2d/external/libnode-v6.9.0/build
+    - c:/dw/pxCore/examples/pxScene2d/external/libnode-v6.9.0/Release/
+    - c:/dw/pxCore/examples/pxScene2d/external/libnode-v6.9.0/build/
 # validator: https://ci.appveyor.com/tools/validate-yaml
