--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ before_install:
   fi
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then  ssh-add /tmp/pxscene-build.pem;
   fi
-- "export RUN_DUKTAPE=OFF"
 - "./ci/before_install.sh"
 - if [ "$TRAVIS_EVENT_TYPE" = "push" ] || [ "$TRAVIS_EVENT_TYPE" = "pull_request"
   ]; then export PATH=/usr/local/opt/ccache/libexec:$PATH; fi
@@ -38,7 +37,7 @@ script:
   ]; then genhtml -o $TRAVIS_BUILD_DIR/logs/codecoverage $TRAVIS_BUILD_DIR/tracefile;
   fi
 - if [ "$TRAVIS_EVENT_TYPE" = "push" ] || [ "$TRAVIS_EVENT_TYPE" = "pull_request" ]; then mv $TRAVIS_BUILD_DIR/logs $TRAVIS_BUILD_DIR/node_logs ;  fi
-- if [ "$RUN_DUKTAPE" = "ON" ] || [ "$RUN_DUKTAPE" = "" ]; then ./ci/testDuktape.sh ; fi
+- if [ "$RUN_DUKTAPE" = "ON" ] || [ "$RUN_DUKTAPE" = "" ]; then echo "------------$RUN_DUKTAPE"; ./ci/testDuktape.sh ; fi
 after_script:
 - "./ci/after_script.sh"
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then  rm -rf /tmp/pxscene-build.pem;
