--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then  ssh-add /tmp/pxscene-build.pem;
   fi
 - "./ci/before_install.sh"
+- "export RUN_DUKTAPE=OFF"
 - if [ "$TRAVIS_EVENT_TYPE" = "push" ] || [ "$TRAVIS_EVENT_TYPE" = "pull_request"
   ]; then export PATH=/usr/local/opt/ccache/libexec:$PATH; fi
 install:
