--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,15 @@ matrix:
     dist: trusty
     sudo: required
   - os: osx
-    osx_image: xcode8
+    osx_image: xcode9.3
+    env:  SPARK_RELEASE="YES"	
+    osx_image: xcode6.4
+    env: SPARK_RELEASE="NO"
 language: c++
 before_install:
+- "echo value of SPARK_RELEASE : $SPARK_RELEASE"
+- if ( [ "$TRAVIS_EVENT_TYPE" = "push" ] || [ "$TRAVIS_EVENT_TYPE" = "pull_request" ] ) && [ SPARK_RELEASE = "NO" ] ; then exit 0 ; fi 
+- if ( [ "$TRAVIS_EVENT_TYPE" = "cron" ] || [ "$TRAVIS_EVENT_TYPE" = "api" ] ) && [ SPARK_RELEASE = "YES" ] ; then exit 0 ; fi 
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then openssl aes-256-cbc -K $encrypted_a739ef9a19a4_key
   -iv $encrypted_a739ef9a19a4_iv -in pxscene-build.pem.enc -out /tmp/pxscene-build.pem
   -d; fi
