--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ matrix:
     sudo: required
   - os: osx
     osx_image: xcode9.3
+  - os: osx   
     osx_image: xcode6.4
 language: c++
 before_install:
