--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,21 @@
 matrix:
   include:
   - os: linux
+    addons:
+      apt:
+      sources:
+        - ubuntu-toolchain-r-test
+      packages:
+        - g++-6
+      env:
+        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
     dist: trusty
     sudo: required
   - os: osx
     osx_image: xcode6.4
 language: c++
 before_install:
+- eval "${MATRIX_EVAL}"
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then openssl aes-256-cbc -K $encrypted_a739ef9a19a4_key -iv $encrypted_a739ef9a19a4_iv -in pxscene-build.pem.enc -out /tmp/pxscene-build.pem -d; fi
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then  eval "$(ssh-agent -s)"; fi
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then  chmod 0600 /tmp/pxscene-build.pem; fi
