--- a/.travis.yml
+++ b/.travis.yml
@@ -3,25 +3,17 @@ matrix:
   - os: linux
     dist: trusty
     sudo: required
-    addons:
-      apt:
-        sources:
-        - ubuntu-toolchain-r-test
-        packages:
-        - gcc-6
-        - g++-6
   - os: osx
     osx_image: xcode6.4
 language: c++
 before_install:
-- if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then openssl aes-256-cbc -K $encrypted_8b763c087de9_key -iv $encrypted_8b763c087de9_iv -in pxscene-build.pem.enc -out /tmp/pxscene-build.pem -d; fi
+- if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then openssl aes-256-cbc -K $encrypted_a739ef9a19a4_key -iv $encrypted_a739ef9a19a4_iv -in pxscene-build.pem.enc -out /tmp/pxscene-build.pem -d; fi
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then  eval "$(ssh-agent -s)"; fi
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then  chmod 0600 /tmp/pxscene-build.pem; fi
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then  ssh-add /tmp/pxscene-build.pem; fi
 - ./ci/before_install.sh
+- printenv
 - if [ "$TRAVIS_EVENT_TYPE" = "push" ] || [ "$TRAVIS_EVENT_TYPE" = "pull_request" ]; then export PATH=/usr/local/opt/ccache/libexec:$PATH; fi
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then  export CC=/usr/bin/gcc-6; export CXX=/usr/bin/g++-6 ; sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc ; sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++ ; fi
-- gcc -v && g++ -v 
 install:
 - ./ci/install.sh
 before_script:
