--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ matrix:
     dist: trusty
     sudo: required
   - os: osx
-    osx_image: xcode9.4
 language: c++
 before_install:
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then openssl aes-256-cbc -K $encrypted_a739ef9a19a4_key -iv $encrypted_a739ef9a19a4_iv -in pxscene-build.pem.enc -out /tmp/pxscene-build.pem -d; fi
@@ -12,6 +11,8 @@ before_install:
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then  chmod 0600 /tmp/pxscene-build.pem; fi
 - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then  ssh-add /tmp/pxscene-build.pem; fi
 - ./ci/before_install.sh
+- /usr/bin/xcodebuild -version
+- g++ -version && gcc -version
 - if [ "$TRAVIS_EVENT_TYPE" = "push" ] || [ "$TRAVIS_EVENT_TYPE" = "pull_request" ]; then export PATH=/usr/local/opt/ccache/libexec:$PATH; fi
 install:
 - ./ci/install.sh
