--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,7 +34,7 @@ init:
   - echo environment setup...
   - git config --system core.longpaths true
   - ps: "ls \"C:/\""
-
+  - ps: Add-AppveyorMessage -Message "APPVEYOR_FORCED_BUILD: $(!!$env:APPVEYOR_FORCED_BUILD)"
 before_build:
   - cd %S%
   - call ci/appveyor-custodian.bat
