--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ init:
   - git config --system core.longpaths true
   - ps: "ls \"C:/\""
 install:
-  - ps: Add-AppveyorMessage -Message "APPVEYOR_FORCED_BUILD: $(!!$env:APPVEYOR_FORCED_BUILD)"
+  - ps: Set-AppveyorBuildVariable isTriggered "$(!!$env:APPVEYOR_FORCED_BUILD)"
 before_build:
   - cd %S%
   - call ci/appveyor-custodian.bat
