--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ matrix:
   - os: osx
     osx_image: xcode9.4
     env:
-      - USE_V8=ON
-      - USE_V8=OFF
+      matrix:
+        - USE_V8=ON
+        - USE_V8=OFF
 language: c++
 before_install:
 - eval "${MATRIX_EVAL}"
