--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,20 @@ matrix:
         - g++-6
     env:
       - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+      - USE_V8=OFF
+  - os: linux
+    dist: trusty
+    sudo: required
+    addons:
+      apt:
+        sources:
+        - ubuntu-toolchain-r-test
+        packages:
+        - gcc-6
+        - g++-6
+    env:
+      - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+      - USE_V8=ON
   - os: osx
     osx_image: xcode9.4
     env: USE_V8=OFF
