--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,5 +31,8 @@ jobs:
   pool:
     vmImage: 'vs2017-win2016'
   steps:
-  - script: ci\install_NSIS.ps1 
+  - task: PowerShell@2
+    inputs:
+      targetType: 'filepath'
+      filePath: ci\install_NSIS.ps1
   - script: ci\build_win32.bat
