--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,5 +34,5 @@ jobs:
   - task: PowerShell@2
     inputs:
       targetType: 'filepath'
-      filePath: ci\install_NSIS.ps1
+      filePath: pxCore\ci\install_NSIS.ps1
   - script: ci\build_win32.bat
