--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,6 @@ jobs:
   steps:
   - task: PowerShell@2
     inputs:
-      targetType: 'filepath'
-      filePath: pxCore\ci\install_NSIS.ps1
+      script: pwd; tree;
+      script: pxCore\ci\install_NSIS.ps1
   - script: ci\build_win32.bat
