--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,7 @@ jobs:
   steps:
   - task: PowerShell@2
     inputs:
-      script: pwd; tree;
-      script: pxCore\ci\install_NSIS.ps1
+      script: 
+        pwd; tree;
+        pxCore\ci\install_NSIS.ps1
   - script: ci\build_win32.bat
