--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,7 @@
 # https://azure.microsoft.com/en-us/services/devops/pipelines/
 #
 
+jobs:
 - job: Windows
   pool:
     vmImage: 'vs2017-win2016'
