--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,4 +24,6 @@ jobs:
   pool:
     vmImage: 'vs2017-win2016'
   steps:
-  - script: ci\build_win32.bat
+  - script:
+    choco install nsis  
+    ci\build_win32.bat
